--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "cheerio": "^1.1.2",
+    "dotenv": "^17.2.1",
     "encoding": "^0.1.13",
     "express": "^5.1.0",
     "jsdom": "^26.1.0",
